--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
                             <div class="Title"><span>Nhiệm vụ 2</span></div>
                             <div class="Overview">
                                 <div class="OverviewItem"><span>
-                                        <p>Sau slide “Agenda”, tạo các slide mới bằng cách nhập dàn ý từ tài liệu
-                                            <b>Corporate Profile</b> trong thư mục <b>Documents</b>.
+                                        <p>Sau slide “Agenda”, tạo các slide mới bằng cách nhập dàn ý từ tài liệu<a HREF="Corporate Profile.docx">
+                                            <b>Corporate Profile</b> </a> trong thư mục <b>Documents</b>.
                                         </p>
                                     </span>
                                 </div>
