--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                             <div class="Overview">
                                 <div class="OverviewItem"><span>
                                         <p>Trên bố cục “Ingredients” của Slide Master, thay đổi dấu đầu dòng cấp một
-                                            thành hình ảnh <a href="checkbox.rar"><b>CheckBox</b></a> từ thư mục <b>Pictures</b>.</p>
+                                            thành hình ảnh <a href="checkbox.jpg"><b>CheckBox</b></a> từ thư mục <b>Pictures</b>.</p>
                                     </span>
                                 </div>
                             </div>
